--- a/.classpath
+++ b/.classpath
@@ -2,45 +2,33 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="lib/asm-3.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/c3p0-0.9.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/cglib-2.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections-20040616.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/dom4j-20040902.021138.jar"/>
 	<classpathentry kind="lib" path="lib/ehcache-core-2.4.3.jar"/>
-	<classpathentry kind="lib" path="lib/excite-bike-1.0.10.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-3.1rc2.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-c3p0-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-commons-annotations-4.0.2.Final.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-core-4.2.6.Final.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-ehcache-4.2.21.Final.jar"/>
-	<classpathentry kind="lib" path="lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="lib/javassist-3.1.jar"/>
-	<classpathentry kind="lib" path="lib/javassist-3.18.1-GA.jar"/>
-	<classpathentry kind="lib" path="lib/jboss-logging-3.1.0.GA.jar"/>
-	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="lib/jsf-api-2.1.7.jar"/>
-	<classpathentry kind="lib" path="lib/jsf-impl-2.1.7.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.8.3.jar"/>
-	<classpathentry kind="lib" path="lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jta-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.25.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.38.jar"/>
-	<classpathentry kind="lib" path="lib/oracle-driver-ojdbc6-12.1.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/poi-3.14-beta1.jar"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-3.14-beta1.jar"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.14-beta1.jar"/>
-	<classpathentry kind="lib" path="lib/primefaces-5.3.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-java-2.52.0.jar"/>
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.52.0.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/trontastic-1.0.10.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-3.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/cdi-api-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/el-api-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-5.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jandex-2.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-interceptors-api_1.1_spec-1.0.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jsr250-api-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-3.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
